analise com ainda erros, arquivo exemplo